[WinCairo] Compile errors when GStreamer is enabled. https://bugs.webkit.org/show_bug.cgi?id=137000

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-11-18
Reviewed by Philippe Normand.

MSVC does not allow the keyword default on move constructors and move assignment operators.

* wtf/gobject/GMainLoopSource.cpp:
(WTF::GMainLoopSource::cancel):
(WTF::GMainLoopSource::socketCallback):
* wtf/gobject/GMainLoopSource.h:
(WTF::GMainLoopSource::Context::operator=):

Canonical link: https://commits.webkit.org/156689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176269 268f45cc-cd09-0410-ab3c-d52691b4dbfc